adjust gc option